--- a/tinydb.bib
+++ b/tinydb.bib
@@ -494,6 +494,21 @@ Sharp Minima},
  year = {2016}
 }
 
+@article{DBLP:journals/corr/KingmaB14,
+ archiveprefix = {arXiv},
+ author = {Diederik P. Kingma and
+Jimmy Ba},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/KingmaB14},
+ eprint = {1412.6980},
+ journal = {CoRR},
+ link = {http://arxiv.org/abs/1412.6980},
+ timestamp = {Wed, 07 Jun 2017 14:40:52 +0200},
+ title = {Adam: {A} Method for Stochastic Optimization},
+ volume = {abs/1412.6980},
+ year = {2014}
+}
+
 @article{DBLP:journals/corr/KongDS15,
  author = {Lingpeng Kong and
 Chris Dyer and
@@ -1792,6 +1807,14 @@ as well as are more stable with respect to the remaining hyperparameters.},
  year = {2006}
 }
 
+@inproceedings{sanguinetti-17,
+ address = {Pisa, Italy},
+ author = {Sanguinetti, Manuela and Bosco, Cristina and Mazzei, Alessandro and Lavelli, Alberto and Tamburini, Fabio},
+ booktitle = {Proc. of Depling},
+ title = {Annotating {I}talian social media texts in {U}niversal {D}ependencies},
+ year = {2017}
+}
+
 @inproceedings{schneider-EtAl:2013:LAW7-ID,
  author = {Schneider, Nathan  and  O'Connor, Brendan  and  Saphra, Naomi  and  Bamman, David  and  Faruqui, Manaal  and  Smith, Noah A.  and  Dyer, Chris  and  Baldridge, Jason},
  booktitle = {Proc. of the 7th Linguistic Annotation Workshop and Interoperability with Discourse},
@@ -1982,7 +2005,7 @@ and decoding speed of a single NMT network but performs on the level of a
  abstract = {This paper proposes a discriminative forest reranking algorithm for dependency parsing that can be seen as a form of efficient stacked parsing. A dynamic programming shift-reduce parser produces a packed derivation forest which is then scored by a discriminative reranker, using the 1-best tree output by the shift-reduce parser as guide features in addition to third-order graph-based features. To improve efficiency and accuracy, this paper also proposes a novel shift-reduce parser that eliminates the spurious ambiguity of arc-standard transition systems. Testing on the English Penn Treebank data, forest reranking gave a state-of-the-art unlabeled dependency accuracy of 93.12.},
  author = {Katsuhiko Hayashi and Shuhei Kondo and Yuji Matsumoto},
  issn = {2307-387X},
- journal = {Transactions of the Association for Computational Linguistics},
+ journal = {TACL},
  keyword = {},
  title = {Efficient Stacked Dependency Parsing by Forest Reranking},
  volume = {1},
@@ -1993,7 +2016,7 @@ and decoding speed of a single NMT network but performs on the level of a
  abstract = {We present a simple and effective scheme for dependency parsing which is based on bidirectional-LSTMs (BiLSTMs). Each sentence token is associated with a BiLSTM vector representing the token in its sentential context, and feature vectors are constructed by concatenating a few BiLSTM vectors. The BiLSTM is trained jointly with the parser objective, resulting in very effective feature extractors for parsing. We demonstrate the effectiveness of the approach by applying it to a greedy transition-based parser as well as to a globally optimized graph-based parser. The resulting parsers have very simple architectures, and match or surpass the state-of-the-art accuracies on English and Chinese.},
  author = {Kiperwasser, Eliyahu  and Goldberg, Yoav},
  issn = {2307-387X},
- journal = {Transactions of the Association for Computational Linguistics},
+ journal = {TACL},
  keyword = {},
  title = {Simple and Accurate Dependency Parsing Using Bidirectional LSTM Feature Representations},
  volume = {4},
