--- a/shortdb.bib
+++ b/shortdb.bib
@@ -610,6 +610,21 @@ Sharp Minima},
  year = {2016}
 }
 
+@article{DBLP:journals/corr/KingmaB14,
+ archiveprefix = {arXiv},
+ author = {Diederik P. Kingma and
+Jimmy Ba},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/KingmaB14},
+ eprint = {1412.6980},
+ journal = {CoRR},
+ link = {http://arxiv.org/abs/1412.6980},
+ timestamp = {Wed, 07 Jun 2017 14:40:52 +0200},
+ title = {Adam: {A} Method for Stochastic Optimization},
+ volume = {abs/1412.6980},
+ year = {2014}
+}
+
 @article{DBLP:journals/corr/KongDS15,
  author = {Lingpeng Kong and
 Chris Dyer and
