--- a/shortdb.bib
+++ b/shortdb.bib
@@ -577,6 +577,22 @@ Jeffrey Dean},
  year = {2013}
 }
 
+@article{DBLP:journals/corr/FreitagAS17,
+ archiveprefix = {arXiv},
+ author = {Markus Freitag and
+Yaser Al{-}Onaizan and
+Baskaran Sankaran},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/FreitagAS17},
+ eprint = {1702.01802},
+ journal = {CoRR},
+ link = {http://arxiv.org/abs/1702.01802},
+ timestamp = {Wed, 07 Jun 2017 14:40:20 +0200},
+ title = {Ensemble Distillation for Neural Machine Translation},
+ volume = {abs/1702.01802},
+ year = {2017}
+}
+
 @article{DBLP:journals/corr/HuangXY15,
  author = {Zhiheng Huang and
 Wei Xu and
