--- a/db.bib
+++ b/db.bib
@@ -1421,6 +1421,18 @@ graphs.},
  year = {2014}
 }
 
+@inproceedings{klein-EtAl:2017:ACL-2017-System-Demonstrations,
+ address = {Vancouver, Canada},
+ author = {Klein, Guillaume  and  Kim, Yoon  and  Deng, Yuntian  and  Senellart, Jean  and  Rush, Alexander},
+ booktitle = {Proceedings of ACL 2017, System Demonstrations},
+ link = {http://aclweb.org/anthology/P17-4012},
+ month = {July},
+ pages = {67--72},
+ publisher = {Association for Computational Linguistics},
+ title = {OpenNMT: Open-Source Toolkit for Neural Machine Translation},
+ year = {2017}
+}
+
 @inproceedings{klein-manning:2003:ACL,
  address = {Sapporo, Japan},
  author = {Dan Klein  and  Christopher D. Manning},
