--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1086,6 +1086,14 @@ target parsing models.},
  year = {2014}
 }
 
+@inproceedings{klein-EtAl:2017:ACL-2017-System-Demonstrations,
+ author = {Klein, Guillaume  and  Kim, Yoon  and  Deng, Yuntian  and  Senellart, Jean  and  Rush, Alexander},
+ booktitle = {Proc. of ACL 2017, System Demonstrations},
+ link = {http://aclweb.org/anthology/P17-4012},
+ title = {OpenNMT: Open-Source Toolkit for Neural Machine Translation},
+ year = {2017}
+}
+
 @inproceedings{kong-EtAl:2014:EMNLP2014,
  author = {Kong, Lingpeng  and  Schneider, Nathan  and  Swayamdipta, Swabha  and  Bhatia, Archna  and  Dyer, Chris  and  Smith, Noah A.},
  booktitle = {Proc. of EMNLP},
