--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1234,6 +1234,15 @@ graphs.},
  year = {2014}
 }
 
+@inproceedings{klein-EtAl:2017:ACL-2017-System-Demonstrations,
+ author = {Klein, Guillaume  and  Kim, Yoon  and  Deng, Yuntian  and  Senellart, Jean  and  Rush, Alexander},
+ booktitle = {Proc. of ACL 2017, System Demonstrations},
+ link = {http://aclweb.org/anthology/P17-4012},
+ publisher = {ACL},
+ title = {OpenNMT: Open-Source Toolkit for Neural Machine Translation},
+ year = {2017}
+}
+
 @inproceedings{klein-manning:2003:ACL,
  author = {Dan Klein  and  Christopher D. Manning},
  booktitle = {Proc. of ACL-2003},
