--- a/db.bib
+++ b/db.bib
@@ -1917,6 +1917,21 @@ of graph-to-sequence conversions.},
  year = {2004}
 }
 
+@inproceedings{NILSSON08.52,
+ address = {Marrakech, Morocco},
+ author = {Jens Nilsson and Joakim Nivre},
+ booktitle = {Proceedings of the Sixth International Conference on Language Resources and Evaluation (LREC'08)},
+ date = {28-30},
+ editor = {Nicoletta Calzolari (Conference Chair), Khalid Choukri, Bente Maegaard, Joseph Mariani, Jan Odijk, Stelios Piperidis, Daniel Tapias},
+ isbn = {2-9517408-4-0},
+ language = {english},
+ month = {may},
+ note = {http://www.lrec-conf.org/proceedings/lrec2008/},
+ publisher = {European Language Resources Association (ELRA)},
+ title = {MaltEval: an Evaluation and Visualization Tool for Dependency Parsing},
+ year = {2008}
+}
+
 @incollection{NIPS2001_2089,
  author = {Michael Collins and Nigel Duffy},
  booktitle = {Advances in Neural Information Processing Systems 14},
