--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1675,6 +1675,19 @@ of graph-to-sequence conversions.},
  year = {2004}
 }
 
+@inproceedings{NILSSON08.52,
+ author = {Jens Nilsson and Joakim Nivre},
+ booktitle = {Proc. of LREC-2008},
+ date = {28-30},
+ editor = {Nicoletta Calzolari (Conference Chair), Khalid Choukri, Bente Maegaard, Joseph Mariani, Jan Odijk, Stelios Piperidis, Daniel Tapias},
+ isbn = {2-9517408-4-0},
+ language = {english},
+ note = {http://www.lrec-conf.org/proceedings/lrec2008/},
+ publisher = {ELRA},
+ title = {MaltEval: an Evaluation and Visualization Tool for Dependency Parsing},
+ year = {2008}
+}
+
 @incollection{NIPS2001_2089,
  author = {Michael Collins and Nigel Duffy},
  booktitle = {NIPS},
