--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1469,6 +1469,17 @@ of graph-to-sequence conversions.},
  year = {2016}
 }
 
+@inproceedings{NILSSON08.52,
+ author = {Jens Nilsson and Joakim Nivre},
+ booktitle = {Proc. of LREC},
+ date = {28-30},
+ isbn = {2-9517408-4-0},
+ language = {english},
+ note = {http://www.lrec-conf.org/proceedings/lrec2008/},
+ title = {MaltEval: an Evaluation and Visualization Tool for Dependency Parsing},
+ year = {2008}
+}
+
 @incollection{NIPS2001_2089,
  author = {Michael Collins and Nigel Duffy},
  booktitle = {NIPS},
