--- a/db.bib
+++ b/db.bib
@@ -1999,6 +1999,17 @@ of graph-to-sequence conversions.},
  year = {2015}
 }
 
+@incollection{NIPS2016_6501,
+ author = {Osband, Ian and Blundell, Charles and Pritzel, Alexander and Van Roy, Benjamin},
+ booktitle = {Advances in Neural Information Processing Systems 29},
+ editor = {D. D. Lee and M. Sugiyama and U. V. Luxburg and I. Guyon and R. Garnett},
+ link = {http://papers.nips.cc/paper/6501-deep-exploration-via-bootstrapped-dqn.pdf},
+ pages = {4026--4034},
+ publisher = {Curran Associates, Inc.},
+ title = {Deep Exploration via Bootstrapped DQN},
+ year = {2016}
+}
+
 @inproceedings{nivre-EtAl:2006:CoNLL-X,
  address = {New York City},
  author = {Nivre, Joakim  and  Hall, Johan  and  Nilsson, Jens  and  Eryi{\v g}it, G{\"u}l{\c s}en  and  Marinov, Svetoslav},
