--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1521,6 +1521,15 @@ of graph-to-sequence conversions.},
  year = {2015}
 }
 
+@incollection{NIPS2016_6501,
+ author = {Osband, Ian and Blundell, Charles and Pritzel, Alexander and Van Roy, Benjamin},
+ booktitle = {NIPS 29},
+ link = {http://papers.nips.cc/paper/6501-deep-exploration-via-bootstrapped-dqn.pdf},
+ pages = {4026--4034},
+ title = {Deep Exploration via Bootstrapped DQN},
+ year = {2016}
+}
+
 @inproceedings{nivre-EtAl:2006:CoNLL-X,
  author = {Nivre, Joakim  and  Hall, Johan  and  Nilsson, Jens  and  Eryi{\v g}it, G{\"u}l{\c s}en  and  Marinov, Svetoslav},
  booktitle = {Proc. of CoNLL},
