--- a/db.bib
+++ b/db.bib
@@ -1446,6 +1446,18 @@ graphs.},
  year = {2003}
 }
 
+@inproceedings{koehn:2004:EMNLP,
+ address = {Barcelona, Spain},
+ author = {Koehn, Philipp},
+ booktitle = {Proceedings of EMNLP 2004},
+ editor = {Dekang Lin and Dekai Wu},
+ month = {July},
+ pages = {388--395},
+ publisher = {Association for Computational Linguistics},
+ title = {Statistical Significance Tests for Machine Translation Evaluation},
+ year = {2004}
+}
+
 @inproceedings{konstas-EtAl:2017:Long,
  abstract = {Sequence-to-sequence models have shown strong performance across a broad range
 of applications. However, their application to parsing and generating text
