--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1253,6 +1253,15 @@ graphs.},
  year = {2003}
 }
 
+@inproceedings{koehn:2004:EMNLP,
+ author = {Koehn, Philipp},
+ booktitle = {Proc. of EMNLP 2004},
+ editor = {Dekang Lin and Dekai Wu},
+ publisher = {ACL},
+ title = {Statistical Significance Tests for Machine Translation Evaluation},
+ year = {2004}
+}
+
 @inproceedings{konstas-EtAl:2017:Long,
  abstract = {Sequence-to-sequence models have shown strong performance across a broad range
 of applications. However, their application to parsing and generating text
