--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1094,6 +1094,13 @@ target parsing models.},
  year = {2017}
 }
 
+@inproceedings{koehn:2004:EMNLP,
+ author = {Koehn, Philipp},
+ booktitle = {Proc. of EMNLP 2004},
+ title = {Statistical Significance Tests for Machine Translation Evaluation},
+ year = {2004}
+}
+
 @inproceedings{kong-EtAl:2014:EMNLP2014,
  author = {Kong, Lingpeng  and  Schneider, Nathan  and  Swayamdipta, Swabha  and  Bhatia, Archna  and  Dyer, Chris  and  Smith, Noah A.},
  booktitle = {Proc. of EMNLP},
