--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1258,6 +1258,17 @@ of graph-to-sequence conversions.},
  year = {2005}
 }
 
+@article{liang:icml08,
+ author = {P. Liang and H. Daum\'{e} and D. Klein},
+ booktitle = {Proceedings of the 25th Annual International Conference on Machine Learning (ICML 2008)},
+ editor = {Andrew McCallum and Sam Roweis},
+ location = {Helsinki, Finland},
+ pages = {592--599},
+ publisher = {Omnipress},
+ title = {Structure compilation: trading structure for features},
+ year = {2008}
+}
+
 @inproceedings{ling-EtAl:2015:NAACL-HLT,
  author = {Ling, Wang  and  Dyer, Chris  and  Black, Alan W  and  Trancoso, Isabel},
  booktitle = {Proc. of NAACL},
