--- a/db.bib
+++ b/db.bib
@@ -1603,6 +1603,18 @@ of graph-to-sequence conversions.},
  year = {2014}
 }
 
+@inproceedings{li-zhang-chen:2014:P14-1,
+ address = {Baltimore, Maryland},
+ author = {Li, Zhenghua  and  Zhang, Min  and  Chen, Wenliang},
+ booktitle = {Proceedings of the 52nd Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+ link = {http://www.aclweb.org/anthology/P14-1043},
+ month = {June},
+ pages = {457--467},
+ publisher = {Association for Computational Linguistics},
+ title = {Ambiguity-aware Ensemble Training for Semi-supervised Dependency Parsing},
+ year = {2014}
+}
+
 @article{Li:2009:PIA:1667988.1667992,
  acmid = {1667992},
  address = {Cambridge, MA, USA},
