--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1379,6 +1379,15 @@ of graph-to-sequence conversions.},
  year = {2014}
 }
 
+@inproceedings{li-zhang-chen:2014:P14-1,
+ author = {Li, Zhenghua  and  Zhang, Min  and  Chen, Wenliang},
+ booktitle = {Proc. of ACL-2014},
+ link = {http://www.aclweb.org/anthology/P14-1043},
+ publisher = {ACL},
+ title = {Ambiguity-aware Ensemble Training for Semi-supervised Dependency Parsing},
+ year = {2014}
+}
+
 @article{Li:2009:PIA:1667988.1667992,
  acmid = {1667992},
  address = {Cambridge, MA, USA},
