--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1228,6 +1228,14 @@ of graph-to-sequence conversions.},
  year = {2016}
 }
 
+@inproceedings{li-zhang-chen:2014:P14-1,
+ author = {Li, Zhenghua  and  Zhang, Min  and  Chen, Wenliang},
+ booktitle = {Proc. of ACL},
+ link = {http://www.aclweb.org/anthology/P14-1043},
+ title = {Ambiguity-aware Ensemble Training for Semi-supervised Dependency Parsing},
+ year = {2014}
+}
+
 @article{Li:2009:PIA:1667988.1667992,
  acmid = {1667992},
  author = {Li, Zhongguo and Sun, Maosong},
