--- a/tinydb.bib
+++ b/tinydb.bib
@@ -2524,3 +2524,63 @@ Beam Search},
  year = {2013}
 }
 
+@inproceedings{udst:overview,
+  author    = {Daniel Zeman and Filip Ginter and Jan Haji{\v{c}} and Joakim Nivre and Martin Popel and Milan Straka},
+  title     = {{CoNLL 2018 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies}},
+  booktitle = {{Proc. of the CoNLL 2018 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies}},
+  year      = {2018}
+}
+
+@inproceedings{udst:overview2017,
+  author = {Zeman, Daniel and Popel, Martin and Straka, Milan and Haji{\v{c}}, Jan and Nivre, Joakim and Ginter, Filip and Luotolahti, Juhani and Pyysalo, Sampo and Petrov, Slav and Potthast, Martin and Tyers, Francis and Badmaeva, Elena and G{\"{o}}k{\i}rmak, Memduh and Nedoluzhko, Anna and Cinkov{\'{a}}, Silvie and Haji{\v{c}} jr., Jan and Hlav{\'{a}}{\v{c}}ov{\'{a}}, Jaroslava and Kettnerov{\'{a}}, V{\'{a}}clava and Ure{\v{s}}ov{\'{a}}, Zde{\v{n}}ka and Kanerva, Jenna and Ojala, Stina and Missil{\"{a}}, Anna and Manning, Christopher and Schuster, Sebastian and Reddy, Siva and Taji, Dima and Habash, Nizar and Leung, Herman and de Marneffe, Marie-Catherine and Sanguinetti, Manuela and Simi, Maria and Kanayama, Hiroshi and de Paiva, Valeria and Droganova, Kira and Mart{\'{\i}}nez Alonso, H{\'{e}}ctor and {\c{C}}{\"{o}}ltekin, {\c{C}}a{\u{g}}r{\i} and Sulubacak, Umut and Uszkoreit, Hans and Macketanz, Vivien and Burchardt, Aljoscha and Harris, Kim and Marheinecke, Katrin and Rehm, Georg and Kayadelen, Tolga and Attia, Mohammed and Elkahky, Ali and Yu, Zhuoran and Pitler, Emily and Lertpradit, Saran and Mandl, Michael and Kirchner, Jesse and Fernandez Alcalde, Hector and Strnadova, Jana and Banerjee, Esha and Manurung, Ruli and Stella, Antonio and Shimada, Atsuko and Kwak, Sookyoung and Mendon{\c{c}}a, Gustavo and Lando, Tatiana and Nitisaroj, Rattima and Li, Josie},
+  title     = {{CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies}},
+  year      = {2017}
+}
+
+@inproceedings{nivre17udw,
+author = {Nivre, Joakim and Fang, Chiao-Ting},
+year = {2017},
+title = {Universal Dependency Evaluation},
+booktitle = {Proc. of the NoDaLiDa 2017 Workshop on Universal Dependencies (UDW 2017)},
+pages = {86--95}
+}
+
+@misc{ud22testdata,
+  title  = {{Universal Dependencies 2.2}},
+  year = {2018},
+  author = {Nivre, Joakim and others},
+  note = {{LINDAT}/{CLARIN} digital library at the Institute of Formal and Applied Linguistics, Charles University, Prague, \url{http://hdl.handle.net/11234/ SUPPLY THE NEW PERMANENT ID HERE!}},
+  copyright = {Licence Universal Dependencies v2.2},
+}
+
+@inproceedings{ud,
+  author    = {Nivre, Joakim and de Marneffe, Marie-Catherine and Ginter, Filip and Goldberg, Yoav and Haji{\v{c}}, Jan and Manning, Christopher and McDonald, Ryan and Petrov, Slav and Pyysalo, Sampo and Silveira, Natalia and Tsarfaty, Reut and Zeman, Daniel},
+  year      = {2016},
+  title     = {{Universal Dependencies} v1: A Multilingual Treebank Collection},
+  booktitle = {Proc. of LREC-2016},
+  isbn      = {978-2-9517408-9-1}
+}
+
+@inproceedings{udpipe,
+  author    = {Straka, Milan and Haji\v{c}, Jan and Strakov\'{a}, Jana},
+  year      = {2016},
+  title     = {{UDPipe:} Trainable Pipeline for Processing {CoNLL-U} Files
+      Performing Tokenization, Morphological Analysis, {POS} Tagging and Parsing},
+  booktitle = {Proc. of LREC-2016},
+  isbn      = {978-2-9517408-9-1}
+}
+
+@inproceedings{tira,
+author = {Martin Potthast and Tim Gollub and Francisco Rangel and Paolo Rosso and Efstathios Stamatatos and Benno Stein},
+title={Improving the Reproducibility of {PAN}'s Shared Tasks: Plagiarism Detection, Author Identification, and Author Profiling},
+booktitle={Information Access Evaluation meets Multilinguality, Multimodality, and Visualization. 5th International Conference of the {CLEF} Initiative ({CLEF} 14)},
+  editor    = {Evangelos Kanoulas and Mihai Lupu and Paul Clough and Mark Sanderson and Mark Hall and Allan Hanbury and Elaine Toms},
+pages={268--299},
+ year={2014},
+  doi       = {10.1007/978-3-319-11382-1\_{}22},
+  isbn      = {978-3-319-11381-4},
+  month     = sep,
+  pages     = {268-299},
+  publisher = {Springer},
+  address   = {Berlin Heidelberg New York}
+}
