--- a/db.bib
+++ b/db.bib
@@ -868,6 +868,28 @@ Mitchell Marcus},
  year = {2014}
 }
 
+@inproceedings{dozat-qi-manning:2017:K17-3,
+ abstract = {This paper describes the neural dependency parser submitted by Stanford to the
+CoNLL 2017 Shared Task on parsing Universal Dependencies. Our system uses
+relatively simple LSTM networks to produce part of speech tags and labeled
+dependency parses from segmented and tokenized sequences of words. In order to
+address the rare word problem that abounds in languages with complex
+morphology, we include a character-based word representation that uses an LSTM
+to produce embeddings from sequences of characters. Our system was ranked first
+according to all five relevant metrics for the system: UPOS tagging (93.09%),
+XPOS tagging (82.27%), unlabeled attachment score (81.30%), labeled attachment
+score (76.30%), and content word labeled attachment score (72.57%).},
+ address = {Vancouver, Canada},
+ author = {Dozat, Timothy  and  Qi, Peng  and  Manning, Christopher D.},
+ booktitle = {Proceedings of the CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
+ month = {August},
+ pages = {20--30},
+ publisher = {Association for Computational Linguistics},
+ title = {Stanford's Graph-based Neural Dependency Parser at the CoNLL 2017 Shared Task},
+ url = {http://www.aclweb.org/anthology/K17-3002},
+ year = {2017}
+}
+
 @inproceedings{durrett-klein:2015:ACL-IJCNLP,
  address = {Beijing, China},
  author = {Durrett, Greg  and  Klein, Dan},
