--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1868,6 +1868,13 @@ of graph-to-sequence conversions.},
  year = {2008}
 }
 
+@inproceedings{nivre17udw,
+ author = {Nivre, Joakim and Fang, Chiao-Ting},
+ booktitle = {Proc. of the NoDaLiDa 2017 Workshop on Universal Dependencies (UDW 2017)},
+ title = {Universal Dependency Evaluation},
+ year = {2017}
+}
+
 @inproceedings{nivre2005pseudo,
  author = {Nivre, Joakim and Nilsson, Jens},
  booktitle = {Proc. of ACL-2005},
@@ -2432,6 +2439,17 @@ and decoding speed of a single NMT network but performs on the level of a
  year = {2005}
 }
 
+@inproceedings{tira,
+ author = {Martin Potthast and Tim Gollub and Francisco Rangel and Paolo Rosso and Efstathios Stamatatos and Benno Stein},
+ booktitle = {Information Access Evaluation meets Multilinguality, Multimodality, and Visualization. 5th International Conference of the {CLEF} Initiative ({CLEF} 14)},
+ doi = {10.1007/978-3-319-11382-1\_{}22},
+ editor = {Evangelos Kanoulas and Mihai Lupu and Paul Clough and Mark Sanderson and Mark Hall and Allan Hanbury and Elaine Toms},
+ isbn = {978-3-319-11381-4},
+ publisher = {Springer},
+ title = {Improving the Reproducibility of {PAN}'s Shared Tasks: Plagiarism Detection, Author Identification, and Author Profiling},
+ year = {2014}
+}
+
 @inproceedings{Toutanova:2003:FPT:1073445.1073478,
  acmid = {1073478},
  author = {Toutanova, Kristina and Klein, Dan and Manning, Christopher D. and Singer, Yoram},
@@ -2469,6 +2487,51 @@ and decoding speed of a single NMT network but performs on the level of a
  publisher = {Coling 2008 Organizing Committee},
  title = {Training Conditional Random Fields Using Incomplete Annotations},
  year = {2008}
+}
+
+@inproceedings{ud,
+ author = {Nivre, Joakim and de Marneffe, Marie-Catherine and Ginter, Filip and Goldberg, Yoav and Haji{\v{c}}, Jan and Manning, Christopher and McDonald, Ryan and Petrov, Slav and Pyysalo, Sampo and Silveira, Natalia and Tsarfaty, Reut and Zeman, Daniel},
+ booktitle = {Proc. of LREC-2016},
+ isbn = {978-2-9517408-9-1},
+ publisher = {European Language Resources Association},
+ title = {{Universal Dependencies} v1: A Multilingual Treebank Collection},
+ year = {2016}
+}
+
+@misc{ud22testdata,
+ author = {Nivre, Joakim and others},
+ copyright = {Licence Universal Dependencies v2.2},
+ note = {{LINDAT}/{CLARIN} digital library at the Institute of Formal and Applied Linguistics, Charles University, Prague, \url{http://hdl.handle.net/11234/ SUPPLY THE NEW PERMANENT ID HERE!}},
+ title = {{Universal Dependencies 2.2}},
+ url_old_2017_replace_by_new_one = {http://hdl.handle.net/11234/1-2184},
+ year = {2018}
+}
+
+@inproceedings{udpipe,
+ author = {Straka, Milan and Haji\v{c}, Jan and Strakov\'{a}, Jana},
+ booktitle = {Proc. of LREC-2016},
+ isbn = {978-2-9517408-9-1},
+ publisher = {European Language Resources Association},
+ title = {{UDPipe:} Trainable Pipeline for Processing {CoNLL-U} Files
+Performing Tokenization, Morphological Analysis, {POS} Tagging and Parsing},
+ year = {2016}
+}
+
+@inproceedings{udst:overview,
+ author = {Daniel Zeman and Filip Ginter and Jan Haji{\v{c}} and Joakim Nivre and Martin Popel and Milan Straka},
+ booktitle = {{Proc. of the CoNLL 2018 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies}},
+ pages_to_be_updated = {1--20},
+ publisher = {ACL},
+ title = {{CoNLL 2018 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies}},
+ year = {2018}
+}
+
+@inproceedings{udst:overview2017,
+ author = {Zeman, Daniel and Popel, Martin and Straka, Milan and Haji{\v{c}}, Jan and Nivre, Joakim and Ginter, Filip and Luotolahti, Juhani and Pyysalo, Sampo and Petrov, Slav and Potthast, Martin and Tyers, Francis and Badmaeva, Elena and G{\"{o}}k{\i}rmak, Memduh and Nedoluzhko, Anna and Cinkov{\'{a}}, Silvie and Haji{\v{c}} jr., Jan and Hlav{\'{a}}{\v{c}}ov{\'{a}}, Jaroslava and Kettnerov{\'{a}}, V{\'{a}}clava and Ure{\v{s}}ov{\'{a}}, Zde{\v{n}}ka and Kanerva, Jenna and Ojala, Stina and Missil{\"{a}}, Anna and Manning, Christopher and Schuster, Sebastian and Reddy, Siva and Taji, Dima and Habash, Nizar and Leung, Herman and de Marneffe, Marie-Catherine and Sanguinetti, Manuela and Simi, Maria and Kanayama, Hiroshi and de Paiva, Valeria and Droganova, Kira and Mart{\'{\i}}nez Alonso, H{\'{e}}ctor and {\c{C}}{\"{o}}ltekin, {\c{C}}a{\u{g}}r{\i} and Sulubacak, Umut and Uszkoreit, Hans and Macketanz, Vivien and Burchardt, Aljoscha and Harris, Kim and Marheinecke, Katrin and Rehm, Georg and Kayadelen, Tolga and Attia, Mohammed and Elkahky, Ali and Yu, Zhuoran and Pitler, Emily and Lertpradit, Saran and Mandl, Michael and Kirchner, Jesse and Fernandez Alcalde, Hector and Strnadova, Jana and Banerjee, Esha and Manurung, Ruli and Stella, Antonio and Shimada, Atsuko and Kwak, Sookyoung and Mendon{\c{c}}a, Gustavo and Lando, Tatiana and Nitisaroj, Rattima and Li, Josie},
+ booktitle = {{Proc. of the CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies}},
+ publisher = {ACL},
+ title = {{CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies}},
+ year = {2017}
 }
 
 @inproceedings{wan-EtAl:2009:EACL,
