--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1724,6 +1724,22 @@ of graph-to-sequence conversions.},
  year = {2004}
 }
 
+@inproceedings{N18-1202,
+ author = {Peters, Matthew
+and Neumann, Mark
+and Iyyer, Mohit
+and Gardner, Matt
+and Clark, Christopher
+and Lee, Kenton
+and Zettlemoyer, Luke},
+ booktitle = {Proc. of NAACL-2018},
+ location = {New Orleans, Louisiana},
+ publisher = {ACL},
+ title = {Deep Contextualized Word Representations},
+ url = {http://aclweb.org/anthology/N18-1202},
+ year = {2018}
+}
+
 @inproceedings{narasimhan-kulkarni-barzilay:2015:EMNLP,
  author = {Narasimhan, Karthik  and  Kulkarni, Tejas  and  Barzilay, Regina},
  booktitle = {Proc. of EMNLP-2015},
