--- a/db.bib
+++ b/db.bib
@@ -1984,6 +1984,23 @@ of graph-to-sequence conversions.},
  year = {2004}
 }
 
+@inproceedings{N18-1202,
+ author = {Peters, Matthew
+and Neumann, Mark
+and Iyyer, Mohit
+and Gardner, Matt
+and Clark, Christopher
+and Lee, Kenton
+and Zettlemoyer, Luke},
+ booktitle = {Proceedings of the 2018 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 1 (Long Papers)},
+ location = {New Orleans, Louisiana},
+ pages = {2227--2237},
+ publisher = {Association for Computational Linguistics},
+ title = {Deep Contextualized Word Representations},
+ url = {http://aclweb.org/anthology/N18-1202},
+ year = {2018}
+}
+
 @inproceedings{ng-low:2004:EMNLP,
  address = {Barcelona, Spain},
  author = {Ng, Hwee Tou  and  Low, Jin Kiat},
