--- a/shortdb.bib
+++ b/shortdb.bib
@@ -342,6 +342,29 @@ POS tags and dependency trees, improves the results further.},
  year = {2005}
 }
 
+@inproceedings{che-EtAl:2017:K17-3,
+ abstract = {This paper describes our system (HIT-SCIR) for the CoNLL 2017 shared task:
+Multilingual Parsing from Raw Text to Universal Dependencies.
+Our system includes three pipelined components: \textit{tokenization},
+\textit{Part-of-Speech} (POS) \textit{tagging} and \textit{dependency parsing}.
+We use character-based bidirectional long short-term memory (LSTM) networks for
+both tokenization and POS tagging.
+Afterwards, we employ a list-based transition-based algorithm for general
+non-projective parsing and present an improved Stack-LSTM-based architecture
+for representing each transition state and making predictions.
+Furthermore, to parse low/zero-resource languages and cross-domain data, we use
+a model transfer approach to make effective use of existing resources.
+We demonstrate substantial gains against the UDPipe baseline, with an average
+improvement of 3.76\% in LAS of all languages. And finally, we rank the 4th
+place on the official test sets.},
+ author = {Che, Wanxiang  and  Guo, Jiang  and  Wang, Yuxuan  and  Zheng, Bo  and  Zhao, Huaipeng  and  Liu, Yang  and  Teng, Dechuan  and  Liu, Ting},
+ booktitle = {Proc. of the CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
+ publisher = {ACL},
+ title = {The HIT-SCIR System for End-to-End Parsing of Universal Dependencies},
+ url = {http://www.aclweb.org/anthology/K17-3005},
+ year = {2017}
+}
+
 @inproceedings{chen-manning:2014:EMNLP2014,
  author = {Chen, Danqi  and  Manning, Christopher},
  booktitle = {Proc. of EMNLP-2014},
