--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1971,6 +1971,23 @@ as well as are more stable with respect to the remaining hyperparameters.},
  year = {2016}
 }
 
+@inproceedings{shi-EtAl:2017:K17-3,
+ abstract = {We describe our entry, C2L2, to the CoNLL 2017 shared task on parsing Universal
+Dependencies from raw text. Our system features an ensemble of three global
+parsing paradigms, one graph-based and two transition-based. Each model
+leverages character-level bi-directional LSTMs as lexical feature extractors to
+encode morphological information. Though relying on baseline tokenizers and
+focusing only on parsing, our system ranked second in the official end-to-end
+evaluation with a macro-average of 75.00 LAS F1 score over 81 test treebanks.
+In addition, we had the top average performance on the four surprise languages
+and on the small treebank subset.},
+ author = {Shi, Tianze  and  Wu, Felix G.  and  Chen, Xilun  and  Cheng, Yao},
+ booktitle = {Proc. of the CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
+ title = {Combining Global Models for Parsing Universal Dependencies},
+ url = {http://www.aclweb.org/anthology/K17-3003},
+ year = {2017}
+}
+
 @inproceedings{Shi:2007:DCB:1625275.1625552,
  acmid = {1625552},
  author = {Shi, Yanxin and Wang, Mengqiu},
