--- a/db.bib
+++ b/db.bib
@@ -1227,6 +1227,18 @@ graphs.},
  year = {2014}
 }
 
+@inproceedings{guo-EtAl:2015:ACL-IJCNLP2,
+ address = {Beijing, China},
+ author = {Guo, Jiang  and  Che, Wanxiang  and  Yarowsky, David  and  Wang, Haifeng  and  Liu, Ting},
+ booktitle = {Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 1: Long Papers)},
+ month = {July},
+ pages = {1234--1244},
+ publisher = {Association for Computational Linguistics},
+ title = {Cross-lingual Dependency Parsing Based on Distributed Representations},
+ url = {http://www.aclweb.org/anthology/P15-1119},
+ year = {2015}
+}
+
 @inproceedings{haghighi-klein:2006:HLT-NAACL06-Main,
  address = {New York City, USA},
  author = {Haghighi, Aria  and  Klein, Dan},
