--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1075,6 +1075,15 @@ graphs.},
  year = {2014}
 }
 
+@inproceedings{guo-EtAl:2015:ACL-IJCNLP2,
+ author = {Guo, Jiang  and  Che, Wanxiang  and  Yarowsky, David  and  Wang, Haifeng  and  Liu, Ting},
+ booktitle = {Proc. of ACL-2015},
+ publisher = {ACL},
+ title = {Cross-lingual Dependency Parsing Based on Distributed Representations},
+ url = {http://www.aclweb.org/anthology/P15-1119},
+ year = {2015}
+}
+
 @inproceedings{haghighi-klein:2006:HLT-NAACL06-Main,
  author = {Haghighi, Aria  and  Klein, Dan},
  booktitle = {Proc. of NAACL-2006},
