--- a/tinydb.bib
+++ b/tinydb.bib
@@ -615,6 +615,24 @@ Wojciech Zaremba},
  year = {2015}
 }
 
+@article{DBLP:journals/corr/SmithTHH17,
+ archiveprefix = {arXiv},
+ author = {Samuel L. Smith and
+David H. P. Turban and
+Steven Hamblin and
+Nils Y. Hammerla},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/SmithTHH17},
+ eprint = {1702.03859},
+ journal = {CoRR},
+ timestamp = {Wed, 07 Jun 2017 14:41:58 +0200},
+ title = {Offline bilingual word vectors, orthogonal transformations and the
+inverted softmax},
+ url = {http://arxiv.org/abs/1702.03859},
+ volume = {abs/1702.03859},
+ year = {2017}
+}
+
 @article{DBLP:journals/corr/YogatamaBDGL16,
  author = {Dani Yogatama and
 Phil Blunsom and
