--- a/tinydb.bib
+++ b/tinydb.bib
@@ -456,6 +456,23 @@ Noam Shazeer},
  year = {2015}
 }
 
+@article{DBLP:journals/corr/BojanowskiGJM16,
+ archiveprefix = {arXiv},
+ author = {Piotr Bojanowski and
+Edouard Grave and
+Armand Joulin and
+Tomas Mikolov},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/BojanowskiGJM16},
+ eprint = {1607.04606},
+ journal = {CoRR},
+ timestamp = {Wed, 07 Jun 2017 14:42:29 +0200},
+ title = {Enriching Word Vectors with Subword Information},
+ url = {http://arxiv.org/abs/1607.04606},
+ volume = {abs/1607.04606},
+ year = {2016}
+}
+
 @article{DBLP:journals/corr/DozatM16,
  archiveprefix = {arXiv},
  author = {Timothy Dozat and
