--- a/shortdb.bib
+++ b/shortdb.bib
@@ -600,6 +600,24 @@ Jeffrey Dean},
  year = {2013}
 }
 
+@article{DBLP:journals/corr/abs-1805-11224,
+ archiveprefix = {arXiv},
+ author = {Yijia Liu and
+Wanxiang Che and
+Huaipeng Zhao and
+Bing Qin and
+Ting Liu},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/abs-1805-11224},
+ eprint = {1805.11224},
+ journal = {CoRR},
+ timestamp = {Mon, 18 Jun 2018 17:28:00 +0200},
+ title = {Distilling Knowledge for Search-based Structured Prediction},
+ url = {http://arxiv.org/abs/1805.11224},
+ volume = {abs/1805.11224},
+ year = {2018}
+}
+
 @article{DBLP:journals/corr/BojanowskiGJM16,
  archiveprefix = {arXiv},
  author = {Piotr Bojanowski and
