--- a/tinydb.bib
+++ b/tinydb.bib
@@ -125,6 +125,22 @@ POS tags and dependency trees, improves the results further.},
  year = {2011}
 }
 
+@inproceedings{bjorkelund-EtAl:2017:K17-3,
+ abstract = {This paper presents the IMS contribution to the CoNLL 2017 Shared Task. In the
+preprocessing step we employed a CRF POS/morphological tagger and a neural
+tagger predicting supertags. On some languages, we also applied word
+segmentation with the CRF tagger and sentence segmentation with a
+perceptron-based parser. For parsing we took an ensemble approach by blending
+multiple instances of three parsers with very different architectures. Our
+system achieved the third place overall and the second place for the surprise
+languages.},
+ author = {Bj\"{o}rkelund, Anders  and  Falenska, Agnieszka  and  Yu, Xiang  and  Kuhn, Jonas},
+ booktitle = {Proc. of the CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
+ title = {IMS at the CoNLL 2017 UD Shared Task: CRFs and Perceptrons Meet Neural Networks},
+ url = {http://www.aclweb.org/anthology/K17-3004},
+ year = {2017}
+}
+
 @inproceedings{blitzer-mcdonald-pereira:2006:EMNLP,
  author = {Blitzer, John  and  McDonald, Ryan  and  Pereira, Fernando},
  booktitle = {Proc. of EMNLP},
