--- a/shortdb.bib
+++ b/shortdb.bib
@@ -851,6 +851,23 @@ Mitchell Marcus},
  year = {2014}
 }
 
+@inproceedings{delhoneux-EtAl:2017:K17-3,
+ abstract = {We present the Uppsala submission to the CoNLL 2017 shared task on parsing from
+raw text to universal dependencies. Our system is a simple pipeline consisting
+of two components. The first performs joint word and sentence segmentation on
+raw text; the second predicts dependency trees from raw words. The parser
+bypasses the need for part-of-speech tagging, but uses word embeddings based on
+universal tag distributions. We achieved a macro-averaged LAS F1 of 65.11 in
+the official test run, which improved to 70.49 after bug fixes. We obtained the
+2nd best result for sentence segmentation with a score of 89.03.},
+ author = {de Lhoneux, Miryam  and  Shao, Yan  and  Basirat, Ali  and  Kiperwasser, Eliyahu  and  Stymne, Sara  and  Goldberg, Yoav  and  Nivre, Joakim},
+ booktitle = {Proc. of the CoNLL 2017 Shared Task: Multilingual Parsing from Raw Text to Universal Dependencies},
+ publisher = {ACL},
+ title = {From Raw Text to Universal Dependencies - Look, No Tags!},
+ url = {http://www.aclweb.org/anthology/K17-3022},
+ year = {2017}
+}
+
 @article{Doppa:2014:SPV:2627435.2638577,
  acmid = {2638577},
  author = {Doppa, Janardhan Rao and Fern, Alan and Tadepalli, Prasad},
