--- a/db.bib
+++ b/db.bib
@@ -1985,6 +1985,31 @@ of graph-to-sequence conversions.},
  year = {2015}
 }
 
+@inproceedings{ma-hovy:2017:I17-1,
+ abstract = {In this paper, we propose a probabilistic parsing model that defines a proper
+conditional probability distribution over non-projective
+dependency trees for a given sentence, using neural representations as inputs.
+The neural network architecture is based on bi-directional LSTMCNNs,
+which automatically benefits from both word- and character-level
+representations, by using a combination of bidirectional LSTMs and CNNs. On top
+of the neural network, we introduce a probabilistic structured layer, defining
+a conditional log-linear model over non-projective trees. By exploiting
+Kirchhoff’s Matrix-Tree Theorem (Tutte, 1984), the partition functions and
+marginals can be computed efficiently, leading to a straightforward end-to-end
+model training procedure via back-propagation. We evaluate our model on 17
+different datasets, across 14 different languages. Our parser achieves
+state-of-the-art parsing performance on nine datasets.},
+ address = {Taipei, Taiwan},
+ author = {Ma, Xuezhe  and  Hovy, Eduard},
+ booktitle = {Proceedings of the Eighth International Joint Conference on Natural Language Processing (Volume 1: Long Papers)},
+ month = {November},
+ pages = {59--69},
+ publisher = {Asian Federation of Natural Language Processing},
+ title = {Neural Probabilistic Model for Non-projective MST Parsing},
+ url = {http://www.aclweb.org/anthology/I17-1007},
+ year = {2017}
+}
+
 @inproceedings{ma-zhang-zhu:2014:P14-1,
  address = {Baltimore, Maryland},
  author = {Ma, Ji  and  Zhang, Yue  and  Zhu, Jingbo},
