--- a/tinydb.bib
+++ b/tinydb.bib
@@ -1627,6 +1627,20 @@ state-of-the-art parsing performance on nine datasets.},
  year = {2004}
 }
 
+@inproceedings{N18-1088,
+ author = {Liu, Yijia
+and Zhu, Yi
+and Che, Wanxiang
+and Qin, Bing
+and Schneider, Nathan
+and Smith, Noah A.},
+ booktitle = {Proc. of NAACL},
+ location = {New Orleans, Louisiana},
+ title = {Parsing Tweets into Universal Dependencies},
+ url = {http://aclweb.org/anthology/N18-1088},
+ year = {2018}
+}
+
 @inproceedings{N18-1202,
  author = {Peters, Matthew
 and Neumann, Mark
