--- a/db.bib
+++ b/db.bib
@@ -2140,6 +2140,22 @@ state-of-the-art parsing performance on nine datasets.},
  year = {2004}
 }
 
+@inproceedings{N18-1088,
+ author = {Liu, Yijia
+and Zhu, Yi
+and Che, Wanxiang
+and Qin, Bing
+and Schneider, Nathan
+and Smith, Noah A.},
+ booktitle = {Proceedings of the 2018 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies, Volume 1 (Long Papers)},
+ location = {New Orleans, Louisiana},
+ pages = {965--975},
+ publisher = {Association for Computational Linguistics},
+ title = {Parsing Tweets into Universal Dependencies},
+ url = {http://aclweb.org/anthology/N18-1088},
+ year = {2018}
+}
+
 @inproceedings{N18-1202,
  author = {Peters, Matthew
 and Neumann, Mark
