--- a/shortdb.bib
+++ b/shortdb.bib
@@ -1865,6 +1865,21 @@ state-of-the-art parsing performance on nine datasets.},
  year = {2004}
 }
 
+@inproceedings{N18-1088,
+ author = {Liu, Yijia
+and Zhu, Yi
+and Che, Wanxiang
+and Qin, Bing
+and Schneider, Nathan
+and Smith, Noah A.},
+ booktitle = {Proc. of NAACL-2018},
+ location = {New Orleans, Louisiana},
+ publisher = {ACL},
+ title = {Parsing Tweets into Universal Dependencies},
+ url = {http://aclweb.org/anthology/N18-1088},
+ year = {2018}
+}
+
 @inproceedings{N18-1202,
  author = {Peters, Matthew
 and Neumann, Mark
