--- a/tinydb.bib
+++ b/tinydb.bib
@@ -442,6 +442,25 @@ Marcu, Daniel},
  year = {2011}
 }
 
+@article{DBLP:journals/corr/abs-1805-01087,
+ archiveprefix = {arXiv},
+ author = {Xuezhe Ma and
+Zecong Hu and
+Jingzhou Liu and
+Nanyun Peng and
+Graham Neubig and
+Eduard H. Hovy},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/abs-1805-01087},
+ eprint = {1805.01087},
+ journal = {CoRR},
+ timestamp = {Mon, 04 Jun 2018 17:53:36 +0200},
+ title = {Stack-Pointer Networks for Dependency Parsing},
+ url = {http://arxiv.org/abs/1805.01087},
+ volume = {abs/1805.01087},
+ year = {2018}
+}
+
 @article{DBLP:journals/corr/abs-1805-11224,
  archiveprefix = {arXiv},
  author = {Yijia Liu and
