--- a/db.bib
+++ b/db.bib
@@ -332,6 +332,20 @@ languages.},
  year = {2016}
 }
 
+@inproceedings{C16-1002,
+ author = {Guo, Jiang
+and Che, Wanxiang
+and Wang, Haifeng
+and Liu, Ting},
+ booktitle = {Proceedings of COLING 2016, the 26th International Conference on Computational Linguistics: Technical Papers},
+ location = {Osaka, Japan},
+ pages = {12--22},
+ publisher = {The COLING 2016 Organizing Committee},
+ title = {A Universal Framework for Inductive Transfer Parsing across Multi-typed Treebanks},
+ url = {http://www.aclweb.org/anthology/C16-1002},
+ year = {2016}
+}
+
 @inproceedings{cai-knight:2013:Short,
  address = {Sofia, Bulgaria},
  author = {Cai, Shu  and  Knight, Kevin},
