--- a/shortdb.bib
+++ b/shortdb.bib
@@ -281,6 +281,19 @@ languages.},
  year = {2016}
 }
 
+@inproceedings{C16-1002,
+ author = {Guo, Jiang
+and Che, Wanxiang
+and Wang, Haifeng
+and Liu, Ting},
+ booktitle = {Proc. of Coling 2016},
+ location = {Osaka, Japan},
+ publisher = {The COLING 2016 Organizing Committee},
+ title = {A Universal Framework for Inductive Transfer Parsing across Multi-typed Treebanks},
+ url = {http://www.aclweb.org/anthology/C16-1002},
+ year = {2016}
+}
+
 @inproceedings{cai-knight:2013:Short,
  author = {Cai, Shu  and  Knight, Kevin},
  booktitle = {Proc. of ACL-2013},
