--- a/db.bib
+++ b/db.bib
@@ -726,6 +726,21 @@ Jeffrey Dean},
  year = {2013}
 }
 
+@article{DBLP:journals/corr/abs-1709-03756,
+ archiveprefix = {arXiv},
+ author = {Yan Shao},
+ bibsource = {dblp computer science bibliography, https://dblp.org},
+ biburl = {https://dblp.org/rec/bib/journals/corr/abs-1709-03756},
+ eprint = {1709.03756},
+ journal = {CoRR},
+ timestamp = {Thu, 05 Oct 2017 09:42:55 +0200},
+ title = {Cross-lingual Word Segmentation and Morpheme Segmentation as Sequence
+Labelling},
+ url = {http://arxiv.org/abs/1709.03756},
+ volume = {abs/1709.03756},
+ year = {2017}
+}
+
 @article{DBLP:journals/corr/abs-1805-01087,
  archiveprefix = {arXiv},
  author = {Xuezhe Ma and
